--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
       "package": "com.eztech.eztreecare",
       "versionCode": 1
     },
-    "description": "Developed by Eztech Team",
+    "description": "Developed by EZTECH Team",
     "githubUrl": "https://github.com/nguyensonhai/eztreecare"
   }
 }
