--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "icon": "./assets/icon.png",
     "version": "1.0.0",
     "ios": {
-      "bundleIdentifier": "com.eztech.eztreecare",
+      "bundleIdentifier": "com.ezratech.eztreecare",
       "buildNumber": "1.0.0"
     },
     "splash": {
@@ -16,10 +16,18 @@
     },
     "platforms": ["ios", "android", "web"],
     "android": {
-      "package": "com.eztech.eztreecare",
+      "package": "com.ezratech.eztreecare",
       "versionCode": 1
     },
-    "description": "Developed by EZTECH Team",
-    "githubUrl": "https://github.com/nguyensonhai/eztreecare"
+    "androidNavigationBar": {
+      "visible": "sticky-immersive"
+    },
+    "androidStatusBar": {
+      "hidden": true
+    },
+    "owner": "nguyensonhai",
+    "description": "Developed by Ez Ratech Software",
+    "githubUrl": "https://github.com/nguyensonhai/eztreecare",
+    "privacy": "public"
   }
 }
